php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36941 ArrayIterator does not clone itself
Submitted: 2006-04-01 16:29 UTC Modified: 2006-04-04 19:53 UTC
From: ce at netage dot bg Assigned: helly (profile)
Status: Closed Package: SPL related
PHP Version: 5.1.3RC2 OS: *
Private report: No CVE-ID: None
 [2006-04-01 16:29 UTC] ce at netage dot bg
Description:
------------
ArrayIterator does not clone itself

Reproduce code:
---------------
$a = new ArrayIterator();
$a[] = 1;

$b = clone $a;

var_dump($a[0], $b[0]);
$b[0] = $b[0] + 1;
var_dump($a[0], $b[0]);


Expected result:
----------------
int(1)
int(1)
int(1)
int(2)


Actual result:
--------------
int(1)
int(1)
int(2)
int(2)


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-04-01 21:17 UTC] tony2001@php.net
Marcus, could you plz look at it?
 [2006-04-02 17:11 UTC] helly@php.net
Fixed most of the issue in head but not like you expected to.

If you clone an ArrayIterator you also clone its reference thus the described behavior below is correct.

If you clone an ArrayObject you clone the array, too. However the behavior is not completely correct yet.
 [2006-04-04 19:53 UTC] helly@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 07:00:02 2026 UTC