- MFH   . Fixed bug #36941 (ArrayIterator does not clone itself)   . Fixed SEGV when ArrayObject/Iterator use reference to self   . Added tests